--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,24 +2,26 @@ name: Go CI
 on:
   push:
     branches: [ main ]
-  jobs:
+jobs:
+  build:
     name: Build
     strategy:
       matrix:
         go-version: [1.16.x, 1.17.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{matrix.platform}}
+    runs-on: ${{ matrix.platform }}
     steps:
-      - name: Set up Go ${{ matrix.node-version }}
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Test
-        run: |
-          export GO111MODULE="on"
-          export GOPATH=""
-          cd go
-          go test -v ./...
-        shell: bash
+    - name: Set up Go ${{ matrix.go-version }}
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Test
+      run: |
+        export GO111MODULE="on"
+        export GOPATH=""
+        cd go
+        go test -v ./...
+      shell: bash
+      
